--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Noughts and Crosses</h1>
     </header>
+
     <table>
         <tr>
             <td class="cell" id="0"></td>
@@ -28,9 +29,9 @@
             <td class="cell" id="8"></td>
         </tr>
     </table>
-    <div class="endgame">
-        <div class="text"></div>
-    </div>
+
+    <div id="Action-Message">X, make your move.</div>
+
     <button onclick="startGame()">Replay</button>
 
    <script src="script.js"></script>
