--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div id="Action-Message">X, make your move.</div>
 
-    <button onclick="startGame()">Replay</button>
+    <button onclick="replay()">Replay</button>
 
    <script src="script.js"></script>
 </body>
